<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".signin.SignInActivity">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/logo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/sideMargin"
      android:adjustViewBounds="true"
      android:scaleType="fitCenter"
      android:src="@drawable/blizz"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/usernameTv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:text="@string/username"
      app:layout_constraintEnd_toEndOf="@+id/logo"
      app:layout_constraintStart_toStartOf="@+id/logo"
      app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <EditText
      android:id="@+id/usernameEt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:hint="@string/usernameHint"
      android:imeOptions="actionNext"
      android:inputType="text"
      android:lines="1"
      app:layout_constraintEnd_toEndOf="@+id/usernameTv"
      app:layout_constraintStart_toStartOf="@+id/usernameTv"
      app:layout_constraintTop_toBottomOf="@+id/usernameTv"/>

    <TextView
      android:id="@+id/passwordTv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:text="@string/password"
      app:layout_constraintEnd_toEndOf="@+id/usernameEt"
      app:layout_constraintStart_toStartOf="@+id/usernameEt"
      app:layout_constraintTop_toBottomOf="@+id/usernameEt"/>

    <EditText
      android:id="@+id/passwordEt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:hint="@string/passwordHint"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:lines="1"
      app:layout_constraintEnd_toEndOf="@+id/passwordTv"
      app:layout_constraintStart_toStartOf="@+id/passwordTv"
      app:layout_constraintTop_toBottomOf="@+id/passwordTv"/>

    <Button
      android:id="@+id/signInBt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:text="@string/signIn"
      app:layout_constraintEnd_toEndOf="@+id/passwordEt"
      app:layout_constraintStart_toStartOf="@+id/passwordEt"
      app:layout_constraintTop_toBottomOf="@+id/passwordEt"/>

    <TextView
      android:id="@+id/errorMsgTv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elementMargin"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="@+id/signInBt"
      app:layout_constraintStart_toStartOf="@+id/signInBt"
      app:layout_constraintTop_toBottomOf="@+id/signInBt"/>

  </android.support.constraint.ConstraintLayout>

</ScrollView>